# DTBase

./: .gitignore  .pre-commit-config.yaml  DeveloperDocs.md  Dockerfile_backend  Dockerfile_db  Dockerfile_frontend  Dockerfile_functions  LICENSE  README.md  compose.yaml  default.env  docker_variables.env  init.sql  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: backend-docker.yaml  frontend-docker.yaml  functions-docker.yaml  pre-commit.yaml  tests.yaml
.secrets/: dtenv_template.sh
dockerfiles/: Dockerfile.db  Dockerfile.frontend  Dockerfile.functions
docs/: DeveloperDocs.md  docs.md
dtbase/: README.md
dtbase/backend/: README.md  auth.py  config.py  create_app.py  db.py  dtbase_app.py  exc.py  locations.py  main.py  models.py  run.sh  run_localdb.sh  utils.py
dtbase/backend/api/: __init__.py
dtbase/backend/api/auth/: __init__.py  routes.py
dtbase/backend/api/location/: __init__.py  routes.py
dtbase/backend/api/model/: __init__.py  routes.py
dtbase/backend/api/sensor/: __init__.py  routes.py
dtbase/backend/api/service/: routes.py
dtbase/backend/api/user/: __init__.py  routes.py
dtbase/backend/database/: db_docker.py  locations.py  models.py  queries.py  sensor_locations.py  sensors.py  service.py  users.py  utils.py
dtbase/backend/routers/: auth.py  location.py  model.py  sensor.py  service.py  user.py
dtbase/core/: README.md  constants.py  db.py  db_docker.py  exc.py  locations.py  models.py  queries.py  sensor_locations.py  sensors.py  service.py  structure.py  users.py  utils.py
dtbase/data_utils/dataprocessor/: clean_data.py  get_data.py  prepare_data.py
dtbase/frontend/: .eslintrc  .prettierignore  .prettierrc  README.md  exc.py  frontend_app.py  user.py  utils.py
dtbase/frontend/app/: __init__.py
dtbase/frontend/app/base/: routes.py
dtbase/frontend/app/base/static/: README.md
dtbase/frontend/app/base/templates/: base_site.html
dtbase/frontend/app/home/: routes.py
dtbase/frontend/app/locations/: routes.py
dtbase/frontend/app/locations/templates/: location_schema_form.html  locations_table.html
dtbase/frontend/app/models/: __init__.py  routes.py
dtbase/frontend/app/sensors/: routes.py
dtbase/frontend/app/sensors/templates/: readings.html  sensor_form.html  time_series_plots.html
dtbase/frontend/app/services/: __init__.py  routes.py
dtbase/frontend/app/users/: routes.py
dtbase/functions/: README.md
dtbase/functions/arima/: __init__.py  function.json
dtbase/functions/ingress_rothamsted/: __init__.py
dtbase/functions/ingress_weather/: __init__.py
dtbase/ingress/: README.md  base.py  host.json  ingress_base.py  ingress_hyper.py  ingress_rothamsted.py  ingress_utils.py  ingress_weather.py  run_hyper_func.py
dtbase/ingress/data/: ZensieTRH_18-23-27_2021-22.csv
dtbase/ingress/examples/: ingress_weather.ipynb
dtbase/ingress/hyper_func/: __init__.py
dtbase/ingress/scripts/: upload_growingunderground_zensie_data.py
dtbase/models/: README.md  arima.py
dtbase/models/arima/: arima_pipeline.py  config.py  config_arima.ini  run_locally.py  run_pipeline.py
dtbase/models/arima/arima/: __init__.py  arima_pipeline.py  clean_data.py  config.py  config_arima.ini  get_data.py  prepare_data.py
dtbase/models/examples/: insert_dummy_data.py  run_arima.py  run_hodmd.py  test_hodmd.ipynb
dtbase/models/hodmd/: hodmd_model.py  run_pipeline.py
dtbase/models/utils/: backend_call.py  clean_data.py  config.py  db_utils.py  get_data.py  insert_data.py
dtbase/models/utils/dataprocessor/: clean_data.py  config.py  data_config.ini  get_data.py  prepare_data.py
dtbase/services/: README.md  base.py
dtbase/tests/: conftest.py  generate_synthetic_data.py  test_api.py  test_api_auth.py  test_api_locations.py  test_api_models.py  test_api_sensors.py  test_api_services.py  test_api_user.py  test_db.py  test_frontend_home.py  test_frontend_locations.py  test_frontend_login.py  test_frontend_models.py  test_frontend_sensors.py  test_frontend_services.py  test_frontend_users.py  test_ingress_base.py  test_ingress_weather.py  test_locations.py  test_model_arima.py  test_model_data_access.py  test_models.py  test_sensor_locations.py  test_sensors.py  test_services.py  test_services_base.py  test_users.py  upload_synthetic_data.py  utils.py
dtbase/tests/resources/: data_for_tests.py
dtbase/webapp/: .eslintrc  .prettierignore  .prettierrc  config.py  frontend_app.py  package-lock.json  package.json  run.sh  tsconfig.json  user.py  utils.py  webpack.config.js
dtbase/webapp/app/: __init__.py
dtbase/webapp/app/base/: __init__.py  forms.py  routes.py
dtbase/webapp/app/base/static/: README.md  node_modules
dtbase/webapp/app/base/templates/: base_site.html
dtbase/webapp/app/home/: __init__.py  routes.py
dtbase/webapp/app/home/templates/: index.html
dtbase/webapp/app/locations/: __init__.py  routes.py
dtbase/webapp/app/locations/templates/: location_form.html  location_schema_form.html  locations_table.html
dtbase/webapp/app/models/: __init__.py  routes.py
dtbase/webapp/app/models/templates/: index.html  models.html
dtbase/webapp/app/sensors/: __init__.py  routes.py
dtbase/webapp/app/sensors/templates/: readings.html  sensors.html  (+5 more)
dtbase/webapp/app/services/: routes.py
dtbase/webapp/app/users/: routes.py
examples/: 000_Local_Deployment.ipynb  001_Data_Ingress.ipynb  README.md  insert_dummy_data.py  run_arima.py  run_hodmd.py  test_hodmd.ipynb
infrastructure/: Pulumi.dev.yaml  Pulumi.northwyketwin.yaml  Pulumi.test.yaml  Pulumi.yaml  README  README.md  __main__.py
media/: README.md
scripts/: setup_dev.sh
tests/: conftest.py  test_api_auth.py  test_api_locations.py  test_api_models.py  test_api_sensors.py  test_api_services.py  test_api_user.py  test_db.py  test_frontend_home.py  test_frontend_login.py  test_frontend_models.py  test_frontend_sensors.py  test_frontend_users.py  test_ingress_weather.py  test_locations.py  test_model_arima.py  test_models.py  test_sensor_locations.py  test_sensors.py  test_services.py  test_users.py  upload_synthetic_data.py
(+57 files in other folders)
