[project]
name = "dtbase"
version = "0.1"
description = "Core functionality for a generic digital twin"
authors = [{name = "The Alan Turing Institute Research Engineering Group"}]
requires-python = ">=3.10,<3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
keywords = ["digital twin"]
dependencies = [
    "coloredlogs ~= 15.0.1 ",
    "sqlalchemy ~= 2.0.23",
    "SQLAlchemy-Utils ~= 0.41.1",

    "flask-sqlalchemy ~= 3.1.1",
    "flask ~= 3.0.0",
    "flask_login ~= 0.6.3",
    "flask-cors ~= 4.0.0",
    "flask_migrate ~= 4.0.5",

    "Jinja2 ~= 3.1.2 ",
    "jinjasql ~= 0.1.8",
    "psycopg2-binary ~= 2.9.9",
    "pandas ~= 2.1.3",

    "scipy ~= 1.11.3",
    "numpy ~= 1.26.2",
    "matplotlib ~= 3.8.1",
    "scikit-learn ~= 1.3.2",

    "bcrypt ~= 4.0.1",

    "azure-functions ~= 1.17.0",
    "flask_wtf ~= 1.2.1",

    "azure-storage-blob ~= 12.19.0",

    "WTForms ~= 3.1.1",
    "werkzeug ~= 3.0.1",
    "requests ~= 2.31.0",
    "python-dateutil ~= 2.8.2",

    "PyYAML ~= 6.0.1",
    "requests_mock ~= 1.11.0",

    "statsmodels ~= 0.14.0",
    "pydmd ~= 0.4.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit ~= 3.5.0",
    "black ~= 23.11.0",
    "pylint ~= 3.0.2",
    "pytest ~= 7.4.3",
    "pytest-cov ~= 4.1.0",
    "ruff ~= 0.1.5",
]
infrastructure = [
    "pulumi ~= 3.93.0",
    "pulumi-azure-native ~= 2.17.0",
]

[project.urls]
"Homepage" = "https://github.com/alan-turing-institute/DTBase"
"Bug tracker" = "https://github.com/alan-turing-institute/DTBase/issues"

[project.scripts]
dtbase_start_postgres_docker = "dtbase.core.db_docker:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
dtbase = ["models/arima/arima/config_arima.ini", "models/utils/dataprocessor/data_config.ini"]

[tool.setuptools]
packages = ["dtbase"]
license-files = ["LICENSE"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
# TODO Comment in more of the below as we clean up the code.
select = [
  "F",
  "E",
  "I",
#  "W",
#  "N",
#  "C",
#  "D",
#  "YTT",
#  "ANN",
#  "ASYNC",
#  "B",
#  "A",
#  "C4",
#  "DTZ",
#  "T10",
#  "DJ",
#  "EXE",
#  "FA",
#  "ISC",
#  "G",
#  "PIE",
#  "PYI",
#  "PT",
#  "Q",
#  "RSE",
#  "RET",
#  "SLF",
#  "SLOT",
#  "SIM",
#  "TCH",
#  "ARG",
#  "PTH",
#  "PD",
#  "PGH",
#  "PL",
#  "NPY",
#  "RUF",
]
# Don't use the automatic fixing for now.
fixable = ["I"]
unfixable = ["F", "E"]
